Modificacion en los menus (WIP)

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <header id="in_header">
 
         <div class="container-fluid navbar cont-login">
-            <a href="./paginas/registro.html" class="login-button" id="login-button-principal">Login</a>
+            <a href="./paginas/sesion.html" class="login-button" id="login-button-principal">Login</a>
             <button class="navbar-toggler" id="button-menu" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar" aria-controls="offcanvasNavbar">
                 <span class="navbar-toggler-icon"></span>
             </button>
@@ -48,9 +48,6 @@
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link mx-lg-2" href="paginas/tienda/autos.html">Productos</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link mx-lg-2" href="#">Ubicación</a>
                             </li>
                         </ul>
                     </div>
