--- a/paginas/VentaAuto.html
+++ b/paginas/VentaAuto.html
@@ -8,13 +8,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" href="../assets/imagenes/logo/logo.png">
-    <title>Venda su auto</title>
+    <title>Vender auto - Drive & Dream</title>
 </head>
 <body id="bodyVA">
     <header>
         <nav class="navbar navbar-expand-lg">
             <div class="container-fluid">
-                <a class="navbar-brand me-auto" href="#">
+                <a class="navbar-brand me-auto" href="../index.html">
                     <img id="logo" src="../assets/imagenes/logo/logo.png" alt="">
                 </a>
                 <div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasNavbar" aria-labelledby="offcanvasNavbarLabel">
@@ -27,24 +27,21 @@
                     <div class="offcanvas-body">
                         <ul class="navbar-nav justify-content-center flex-grow-1 pe-3">
                             <li class="nav-item">
-                                <a class="nav-link mx-lg-2 active" aria-current="page" href="#">Home</a>
+                                <a class="nav-link mx-lg-2" href="../index.html">Home</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link mx-lg-2" href="#">Nosotros</a>
+                                <a class="nav-link mx-lg-2" href="nosotros.html">Nosotros</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link mx-lg-2" href="#">Contacto</a>
+                                <a class="nav-link mx-lg-2" href="cliente.html">Contacto</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link mx-lg-2" href="">Productos</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link mx-lg-2" href="#">Ubicación</a>
+                                <a class="nav-link mx-lg-2" href="tienda/autos.html">Productos</a>
                             </li>
                         </ul>
                     </div>
                 </div>
-                <a href="./paginas/registro.html" class="login-button">Login</a>
+                <a href="sesion.html" class="login-button">Login</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar" aria-controls="offcanvasNavbar">
                     <span class="navbar-toggler-icon"></span>
                 </button>
