--- a/paginas/cliente.html
+++ b/paginas/cliente.html
@@ -8,13 +8,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" href="../assets/imagenes/logo/logo.png">
-    <title>Servicio al cliente</title>
+    <title>Servicio al cliente - Drive & Dream</title>
 </head>
 <body id="BodyCliente">
     <header>
         <nav class="navbar navbar-expand-lg">
             <div class="container-fluid">
-                <a class="navbar-brand me-auto" href="#">
+                <a class="navbar-brand me-auto" href="../index.html">
                     <img id="logo" src="../assets/imagenes/logo/logo.png" alt="">
                 </a>
                 <div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasNavbar" aria-labelledby="offcanvasNavbarLabel">
@@ -30,16 +30,13 @@
                                 <a class="nav-link mx-lg-2" href="../index.html">Home</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link mx-lg-2" href="paginas/nosotros.html">Nosotros</a>
+                                <a class="nav-link mx-lg-2" href="nosotros.html">Nosotros</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link mx-lg-2 active" aria-current="page" href="../paginas/cliente.html">Contacto</a>
+                                <a class="nav-link mx-lg-2 active" aria-current="page" href="cliente.html">Contacto</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link mx-lg-2" href="../paginas/tienda/autos.html">Productos</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link mx-lg-2" href="#">Ubicación</a>
+                                <a class="nav-link mx-lg-2" href="tienda/autos.html">Productos</a>
                             </li>
                         </ul>
                     </div>
