--- a/paginas/registro.html
+++ b/paginas/registro.html
@@ -5,16 +5,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../css/main.css">
     <link rel="icon" href="../assets/imagenes/logo/logo.png">
-    <title>D&D - Registrarse</title>
+    <title>Iniciar sesion - Drive & Dream</title>
 </head>
 <body id="body__Registro">
     <div class="form-body">
+
         <img src="../assets/imagenes/logo/logo.png" alt="user-login">
         <p class="text">Iniciar sesion en Drive & Dream</p>
         <form class="login-form">
             <input type="text" placeholder="email o nombre de usuario">
             <input type="password" placeholder="Contraseña">
-            <button type="submit">Iniciar Sesion</button>
+            <button type="submit"> <a href="../index.html">Iniciar Sesion</a></button>
         </form>
     </div>
 
