--- a/paginas/sesion.html
+++ b/paginas/sesion.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../css/main.css">
     <link rel="icon" href="../assets/imagenes/logo/logo.png">
-    <title>Document</title>
+    <title>Registrarse - Drive & Dream</title>
 </head>
 <body id="body__Registro">
     <div class="form-body">
@@ -17,7 +17,7 @@
             <input type="text" placeholder="Email">
             <input type="text" placeholder="Contraseña">
             <a href="../paginas/registro.html" id="link">Ya tengo cuenta</a>
-            <button>Iniciar Sesion</button>
+            <button><a href="../index.html">Iniciar Sesion</a></button>
         </form>
     </div>
 
