corregido un error y empece a poner bien los ids y class

--- a/paginas/tienda/autos.html
+++ b/paginas/tienda/autos.html
@@ -58,18 +58,18 @@
             </div>
         </nav>
     </header>
-    <main id="tieAut__Main">
-        <div id="cosasJS">
-            <div class="body-">
-                <div class="contenedorBusqueda">
-                    <input type="text" placeholder="Buscar..." id="search-input" oninput="filterDivs()">
-                    <div class="botonBusqueda">
+    <main id="tieAutMain">
+        <div id="tieAutMain__cosasJS">
+            <div id="tieAutMain__cosasJS--contenedorBusqueda">
+                <div id="tieAutMain__cosasJS--contenedorBusqueda--busqueda">
+                    <input type="text" placeholder="Buscar..." id="tieAutMain__cosasJS--contenedorBusqueda--busqueda--busquedaInput" oninput="filterDivs()">
+                    <div id="tieAutMain__cosasJS--contenedorBusqueda--busqueda--botonBusqueda">
                         <span><i class="fa fa-search"></i></span>
                     </div>
                 </div>
             </div>
-            <div id="filtros">
-                <button id="toggleSidebar" class="open-btn">☰</button>
+            <div id="tieAutMain__cosasJS--filtros">
+                <button id="tieAutMain__cosasJS--filtros--barraDeFiltros" class="open-btn">☰</button>
 
                 <div id="sidebar" class="sidebar">
                     <button id="closeSidebar" class="close-btn">✖</button>
