Productos: Botones linkeados, menu eliminado y style agregado menu: Modificacion de background

--- a/paginas/tienda/autos-productos/7Nissan/prod-1.html
+++ b/paginas/tienda/autos-productos/7Nissan/prod-1.html
@@ -11,46 +11,6 @@
     <title>Nissan VERSA</title>
 </head>
 <body>
-    <header>
-        <nav class="navbar navbar-expand-lg">
-            <div class="container-fluid">
-                <a class="navbar-brand me-auto" href="#">
-                    <img id="logo" src="../../../../assets/imagenes/logo/logo.png" alt="">
-                </a>
-                <div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasNavbar" aria-labelledby="offcanvasNavbarLabel">
-                    <div class="offcanvas-header">
-                        <h5 class="offcanvas-title" id="offcanvasNavbarLabel">
-                            <img id="logo2" src="" alt="">
-                        </h5>
-                        <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
-                    </div>
-                    <div class="offcanvas-body">
-                        <ul class="navbar-nav justify-content-center flex-grow-1 pe-3">
-                            <li class="nav-item">
-                                <a class="nav-link mx-lg-2" href="#">Home</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link mx-lg-2 active" aria-current="page" href="#">Nosotros</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link mx-lg-2" href="#">Contacto</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link mx-lg-2" href="">Productos</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link mx-lg-2" href="#">Ubicación</a>
-                            </li>
-                        </ul>
-                    </div>
-                </div>
-                <a href="./paginas/registro.html" class="login-button">Login</a>
-                <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar" aria-controls="offcanvasNavbar">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-            </div>
-        </nav>
-    </header>
     <main class="prods__main">
         <div class="row prods__encabezado">
             
@@ -103,7 +63,7 @@
 
             <div class="col-lg-6 col-md-12 col-sm-12 prods__info">
                 <div class="prods__volver">
-                    <a href="../autos.html">Volver</a>
+                    <a href="../../autos.html">Volver</a>
                 </div>
                 <h2>Nissan VERSA</h2>
                 <table>
