cambio de ids hasta el boton de apertura del sidebar

--- a/paginas/tienda/autos.html
+++ b/paginas/tienda/autos.html
@@ -14,13 +14,14 @@
 
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Productos - Drive & Dream</title>
+    <title>Venta De Autos - Drive & Dream</title>
 </head>
 <body>
     <header>
+        <h1 class="noSeVe">Drive & Dream</h1>
         <nav class="navbar navbar-expand-lg">
             <div class="container-fluid">
-                <a class="navbar-brand me-auto" href="../index.html">
+                <a class="navbar-brand me-auto" href="#">
                     <img id="logo" src="../../assets/imagenes/logo/logo.png" alt="">
                 </a>
                 <div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasNavbar" aria-labelledby="offcanvasNavbarLabel">
@@ -33,21 +34,24 @@
                     <div class="offcanvas-body">
                         <ul class="navbar-nav justify-content-center flex-grow-1 pe-3">
                             <li class="nav-item">
-                                <a class="nav-link mx-lg-2" href="../../index.html">Home</a>
+                                <a class="nav-link mx-lg-2 active" aria-current="page" href="#">Home</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link mx-lg-2" href="../nosotros.html">Nosotros</a>
+                                <a class="nav-link mx-lg-2" href="#">Nosotros</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link mx-lg-2" href="../cliente.html">Contacto</a>
+                                <a class="nav-link mx-lg-2" href="#">Contacto</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link mx-lg-2 active" active aria-current="page" href="tienda/autos.html">Productos</a>
+                                <a class="nav-link mx-lg-2" href="">Productos</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link mx-lg-2" href="#">Ubicación</a>
                             </li>
                         </ul>
                     </div>
                 </div>
-                <a href="../sesion.html" class="login-button">Login</a>
+                <a href="./paginas/registro.html" class="login-button">Login</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar" aria-controls="offcanvasNavbar">
                     <span class="navbar-toggler-icon"></span>
                 </button>
@@ -65,9 +69,9 @@
                 </div>
             </div>
             <div id="tieAutMain__cosasJS--filtros">
-                <button id="tieAutMain__cosasJS--filtros--barraDeFiltros" class="open-btn">☰</button>
+                <button id="tieAutMain__cosasJS--filtros--barraDeFiltros">☰</button>
 
-                <div id="sidebar" class="sidebar">
+                <div id="tieAutMain__cosasJS--filtros--sidebar" class="tieAutMain__cosasJS--filtros--sidebar">
                     <button id="closeSidebar" class="close-btn">✖</button>
                     <h2>Filtros</h2>
                     <div id="todoterreno?">
