Arreglado el fondo de los productps

--- a/paginas/tienda/autos-productos/1Chevrolet/prod-2.html
+++ b/paginas/tienda/autos-productos/1Chevrolet/prod-2.html
@@ -10,7 +10,7 @@
     <link rel="icon" href="../../../../assets/imagenes/logo/logo.png">
     <title>Chevrolet CRUZE 5</title>
 </head>
-<body>
+<body class="prods__body"> 
     <main class="prods__main">
         <div class="row prods__encabezado">
             
