--- a/paginas/tienda/autos-productos/6Fiat/prod-1.html
+++ b/paginas/tienda/autos-productos/6Fiat/prod-1.html
@@ -10,7 +10,7 @@
     <link rel="icon" href="../../../../assets/imagenes/logo/logo.png">
     <title>Fiat PULSE</title>
 </head>
-<body>
+<body class="prods__body">
     <main class="prods__main">
         <div class="row prods__encabezado">
             
