agregue la opc de venda su auto al menu

--- a/paginas/nosotros.html
+++ b/paginas/nosotros.html
@@ -37,6 +37,9 @@
                         <li class="nav-item">
                             <a class="nav-link mx-lg-2" href="tienda/autos.html">Productos</a>
                         </li>
+                        <li class="nav-item">
+                          <a class="nav-link mx-lg-2" href="VentaAuto.html">Venda su auto</a>
+                      </li>
                     </ul>
                 </div>
             </div>
