--- a/paginas/registro.html
+++ b/paginas/registro.html
@@ -5,17 +5,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../css/main.css">
     <link rel="icon" href="../assets/imagenes/logo/logo.png">
-    <title>Iniciar sesion - Drive & Dream</title>
+    <title>Registrarse - Drive & Dream</title>
 </head>
 <body id="body__Registro">
     <div class="form-body">
-
         <img src="../assets/imagenes/logo/logo.png" alt="user-login">
-        <p class="text">Iniciar sesion en Drive & Dream</p>
+        <p class="text">Registrarse en Drive & Dream</p>
         <form class="login-form">
-            <input type="text" placeholder="email o nombre de usuario">
-            <input type="password" placeholder="Contraseña">
-            <button type="submit"> <a href="../index.html">Iniciar Sesion</a></button>
+            <input type="email" placeholder="Nombre">
+            <input type="password" placeholder="Apellido">
+            <input type="text" placeholder="Email">
+            <input type="text" placeholder="Contraseña">
+            <a href="../paginas/sesion.html" id="link">Ya tengo cuenta</a>
+            <button type="submit"><a href="../index.html">Iniciar Sesion</a></button>
         </form>
     </div>
 
